# spectral_wave

./: .gitignore  README.md  main.py  maxwell.spec  memo2_draft.md  pyproject.toml
gui/: main_window.py
tests/: test_maxwell.py  test_segments.py
wave/maxwell/: __init__.py  adapter.py  channels.py  eigfunc.py  evolve.py  green.py  jost.py  kernels.py  model.py  quadrature.py  wronskian.py
